SF Primes/src/objects/CB_Submit_Order__c.object
<CustomObject>
    <fields>
        <fullName>Dealer_Code__c</fullName>
        <formula>Opportunity_Name__r.CB_Dealer_Code__c</formula>
        <label>Dealer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Link__c</fullName>
        <formula>Opportunity_Name__r.ADP_Opportunity_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Submit Orders</relationshipLabel>
        <relationshipName>Submit_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Status__c</fullName>
        <label>Order Status</label>
        <picklist>
            <picklistValues>
                <fullName>WIP</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Submit Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Closed_Orders</fullName>
        <columns>NAME</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Order_Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>Closed Orders</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>IFSManager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Orders</fullName>
        <columns>NAME</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Order_Status__c</field>
            <operation>equals</operation>
            <value>WIP</value>
        </filters>
        <label>My Orders</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>IFSManager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>QueueContractAdminMDAOrderForm_CB_Submit_Order</fullName>
        <columns>NAME</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>Order_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Order_Status__c</field>
            <operation>equals</operation>
            <value>WIP</value>
        </filters>
        <label>Queue - Contract Admin - MDA/Orderform</label>
        <language>en_US</language>
        <queue>QueueContractAdminMDAOrderForm</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <roleAndSubordinatesInternal>IFSManager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Submit Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Submit Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>